# wasm-pdf

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  example2.html  index.html  index.js  package-lock.json  package.json  webpack.config.js  webpack.production.js
crates/pdf_gen/: Cargo.toml
crates/pdf_gen/src/pdf/: mod.rs
crates/pdf_gen/src/pdf/encoders/: zlib.rs
crates/wasm-pdf-gen/: .gitignore  Cargo.toml  README.md
crates/wasm-pdf-gen/benches/: run_bench.rs
crates/wasm-pdf-gen/src/: files.rs  lib.rs  main.rs
crates/wasm-pdf-gen/src/pdf/: canvas.rs  font.rs  json.rs  mod.rs  models.rs  objects.rs  styles.rs  template.rs  text.rs  units.rs
crates/wasm-pdf-gen/src/pdf/encoders/: ascii85.rs  mod.rs  winansi.rs
examples/: text-example.json
src/: lib.rs
src/pdf/: canvas.rs  font.rs  json.rs  mod.rs  models.rs  objects.rs  styles.rs  template.rs  text.rs  units.rs
src/pdf/encoders/: winansi.rs
