[package]
name = "wasm-pdf"
version = "0.1.9"
authors = ["Jussi Niinikoski <jussi.niinikoski@perjantai.fi>"]
description = "Generate PDF files with JavaScript and WebAssembly."
keywords = ["wasm", "pdf"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jussiniinikoski/wasm-pdf/"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-pdf-gen = { path = "crates/wasm-pdf-gen"}
wasm-bindgen = { version = "0.2.62", features = ["serde-serialize"]  }
console_error_panic_hook = "0.1.6"
js-sys = "0.3.39"
serde = { version = "1.0.110", features = ["derive"] }
serde_derive = "1.0.110"

[dependencies.web-sys]
version = "0.3.37"
features = [
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.12"

[workspace]
members = [
  "crates/wasm-pdf-gen",
]