[package]
name = "wasm-pdf-gen"
version = "0.1.0"
authors = ["jussiniinikoski <jussi.niinikoski@perjantai.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.110", features = ["derive"] }
serde_derive = "1.0.110"
deflate = "0.8.4"
base64 = "0.12.1"
lazy_static = "1.4.0"
regex = "1.3.7"

[target.'cfg(any(target_os="wasi", not(target_arch="wasm32")))'.dependencies]
serde_json = "1.0"

[dev-dependencies]
serde_json = "1.0"
criterion = "0.3"

[[bench]]
name = "run_bench"
harness = false